# graph-causal-pricing

./: .gitignore  README.md  pyproject.toml
configs/: causal_config.yaml
experiments/ablations/: plot_ablations.py  run_ablations.py
experiments/baseline_models/: run_baselines.py
experiments/graph_models/: run_graph_dml.py  run_simulation_only.py
notebooks/: 01_exploration.ipynb  02_graph_construction.ipynb  03_causal_baselines.ipynb  04_graph_causal_model.ipynb
paper/: main.tex  refs.bib
src/causal/: exposure.py  graph_dml.py  interpretability.py
src/data/: panel_builder.py  splits.py
src/evaluation/: metrics.py  synthetic_dgp.py
src/graph/: co_purchase.py  embeddings.py  spillover_features.py  substitute.py
src/models/: baselines.py
