[project]
name = "graph-causal-pricing"
version = "0.1.0"
description = "Graph causal modeling for pricing effects"
authors = [
    {name = "mckinneydavid1",email = "40120430+dmckinney-ml@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "plotly (>=6.6.0,<7.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyterlab (>=4.5.6,<5.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "scikit-learn (>=1.6.0,<1.7)",
    "gensim (>=4.4.0,<5.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "econml (>=0.16.0,<0.17.0)",
    "dowhy (>=0.14,<0.15)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "ipywidgets (>=8.1.8,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
